res/examples/invalid/fn_expr_type_mismatch_in_body_infix_bang_and_fn_return_type_mismatch.eg
(a: string): number => { !a };

// out: TypeError: mismatched types: expected type `number` but received `bool`
// out: TypeError: mismatched types: expected type `bool` but received `string`